# pw-whatsapp-bot

./: .env.example  README.md  main.py  pyproject.toml
app/: main.py
app/api/routes/: whatsapp.py
app/core/: celery_app.py  config.py
app/services/: gemini_service.py  media_service.py  tesseract_ocr_service.py  twilio_service.py
app/workers/: tasks.py
