[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pw-whatsapp-bot"
version = "0.1.0"
description = "WhatsApp webhook bot for Pawreli using FastAPI, Twilio, and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "twilio>=9.2.0",
    "google-genai>=0.3.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = false

authors = [
    { name = "Sebastian" }
]

[project.urls]
Repository = "https://github.com/sebassil12/pw-whatsapp-bot"